healthcheck/k8s/wrk-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hc-worker
  namespace: cloud-nlb
spec:
  serviceName: hc-worker-headless
  replicas: 4
  selector:
    matchLabels:
      app: hc-worker
  template:
    metadata:
      labels:
        app: hc-worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/metrics"
    spec:
      hostAliases:
        - ip: "192.168.5.2"
          hostnames:
            - "host.docker.internal"
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: hc-worker
          image: hc-wrk:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: probes
            - containerPort: 8081
              name: metrics
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: tmp-volume
          emptyDir: {}
