healthcheck/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hc-api-server
  namespace: cloud-nlb
  labels:
    app: hc-api-server
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 9090
    targetPort: grpc
    protocol: TCP
  selector:
    app: hc-api-server
